feat: Implement language change feature with UI and storage support
- Added ChangeLanguageScreen for selecting and saving language preferences.
- Integrated GetStorage for persistent language settings.
- Updated main.dart to initialize locale based on stored preferences.
- Enhanced localization in various screens including Auth and Home.
- Added new translations for English and Arabic languages.
- Refactored UI components to support dynamic language changes.
- Updated bottom navigation and app bar to reflect localized labels.
- Adjusted dependencies in pubspec.yaml for compatibility.

--- a/assets/lang/ar_DZ.json
+++ b/assets/lang/ar_DZ.json
@@ -66,5 +66,13 @@
     "not_allowed": "غير مسموح",
     "playlist_not_found": "قائمة التشغيل غير موجودة",
     "fill_all_fields": "يرجى ملء جميع الحقول",
-    "promotion_banner_not_found": "لا يوجد بانر ترويجي"
+    "promotion_banner_not_found": "لا يوجد بانر ترويجي",
+    "create_account": "إنشاء حساب",
+    "books": "كتب",
+    "discover_now": "اكتشف الآن",
+    "all_sections": "كل الأقسام",
+    "welcome_user": "مرحباً، @name!",
+    "change_language": "تغيير اللغة",
+    "save": "حفظ",
+    "cancel": "الغاء"
 }
